-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.1
-
-
21f3a6d8c (dev), 1f87ebd17 (6.5), 2a1ba918d (6.6)
The probably cause of this is the commit which fixes QTBUG-103084.
In a case where QWindows is embedded into foreign window and QML gets loaded into a QQuickView, which has as a parent a QWindow which gets created from a foreign window by using QWindow::fromWinId. So eventhough the window is embedded, m_platformWindow->isEmbedded() returns false in this case.
This could be potentially fixed by making QCocoaWindow::isEmbedded() to return true if window()->parent() is a foreign window.