src/plugins/platforms/cocoa/qnsview_mouse.mm
@@ -543,6 +543,30 @@ static const QPointingDevice *pointingDeviceFor(qint64 deviceID)
     [self handleMouseEvent: theEvent];
 }
 
+- (BOOL)shouldPropagateMouseEnterExit
+{
+    Q_ASSERT(m_platformWindow);
+
+    // We send out enter and leave events mainly from mouse move events (mouseMovedImpl),
+    // but in some case (see mouseEnteredImpl:) we also want to propagate enter/leave
+    // events from the platform. We only do this for windows that themselves are not
+    // handled by another parent QWindow.
+
+    if (m_platformWindow->isContentView())
+        return true;
+
+    // Windows manually embedded into a native view does not have a QWindow parent
+    if (m_platformWindow->isEmbedded())
+        return true;
+
+    // Windows embedded via fromWinId do, but the parent isn't a QNSView
+    QPlatformWindow *parentWindow = m_platformWindow->QPlatformWindow::parent();
+    if (parentWindow && parentWindow->isForeignWindow())
+        return true;
+
+    return false;
+}
+
 - (void)mouseEnteredImpl:(NSEvent *)theEvent
 {
     Q_UNUSED(theEvent);
@@ -566,8 +590,7 @@ static const QPointingDevice *pointingDeviceFor(qint64 deviceID)
     // in time (s_windowUnderMouse). The latter is also used to also send out enter/leave
     // events when the application is activated/deactivated.
 
-    // Root (top level or embedded) windows generate enter events for sub-windows
-    if (!m_platformWindow->isContentView() && !m_platformWindow->isEmbedded())
+    if (![self shouldPropagateMouseEnterExit])
         return;
 
     QPointF windowPoint;
@@ -593,8 +616,7 @@ static const QPointingDevice *pointingDeviceFor(qint64 deviceID)
     if (!m_platformWindow)
         return;
 
-    // Root (top level or embedded) windows generate enter events for sub-windows
-    if (!m_platformWindow->isContentView() && !m_platformWindow->isEmbedded())
+    if (![self shouldPropagateMouseEnterExit])
         return;
 
     QCocoaWindow *windowToLeave = QCocoaWindow::s_windowUnderMouse;
